(fix) LoginFormOrganism - fix spinner visibility

--- a/panel/src/atomic/atoms/SpinnerAtom/style.sass
+++ b/panel/src/atomic/atoms/SpinnerAtom/style.sass
@@ -6,8 +6,16 @@
     height: 100%
     opacity: 0.5
     z-index: 100
-    position: absolute
+    position: relative
     filter: grayscale(1)
+
+  &__mask
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    z-index: 100
+    position: absolute
 
   &__message
     left: 0
